# rmus

./: .env  .env.example  .gitignore  Cargo.toml  todo.org
migrations/: 20210407193959_add-artists.up.sql  20210407194053_add-albums.down.sql  20210407194053_add-albums.up.sql  20210407194129_add-tracks.up.sql  20210407194208_add-tracks-view.down.sql  20210407194208_add-tracks-view.up.sql  20210407213931_add-filePath-column-to-tracks.down.sql  20210407213931_add-filePath-column-to-tracks.up.sql  20210407214845_add-filePath-column-to-v_tracks.down.sql  20210407214845_add-filePath-column-to-v_tracks.up.sql  20210412160256_fix-wrong-join.down.sql  20210412160256_fix-wrong-join.up.sql  20210412163700_add-artist-column-to-tracks.down.sql  20210412163700_add-artist-column-to-tracks.up.sql  20210412164721_add-artist-column-to-v_tracks.down.sql  20210412164721_add-artist-column-to-v_tracks.up.sql
migrations/2021-04-07-add-artists/: up.sql
migrations/202104071700-add-artists/: up.sql
migrations/202104071819-add-albums/: up.sql
src/: app.rs  lib.rs  main.rs  model.rs  models.rs  player.rs  test_helpers.rs  util.rs
src/ui/: mod.rs  view.rs  widget.rs
