[package]
name = "rmus"
version = "0.1.0"
authors = ["Olivier Lischer <olivier.lischer@liolin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "sqlite" ] }
rodio = "0.13.1"
claxon = "0.4.3"
dotenv = "0.15.0"