[package]
name = "rmus"
version = "0.1.0"
authors = ["Olivier Lischer <olivier.lischer@liolin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "sqlite" ] }
async-std = { version = "1.6", features = [ "attributes" ] }

rodio = "0.13.1"
claxon = "0.4.3"

dotenv = "0.15.0"
anyhow = "1.0.40"
log = "0.4.14"
env_logger = "0.8.3"

[dev-dependencies]
rand = "0.8.3"
hex = "0.4.3"