[package]
name = "rmus"
version = "0.1.0"
authors = ["Olivier Lischer <olivier.lischer@liolin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "sqlite" ] }
async-std = { version = "1.6", features = [ "attributes" ] }

rodio = "0.13"
cpal = "0.13"
claxon = "0.4"

tui = "0.14"
termion = "1.5"

dotenv = "0.15"
anyhow = "1.0"
log = "0.4"
env_logger = "0.8"

[dev-dependencies]
rand = "0.8"
hex = "0.4"